# envkeep

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  docker-compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  report.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codex-ci.yml  envkeep-action.yml  python-setup.yml  release.yml
benchmarks/: test_validate_env.py
docs/: achievement-plan.md  benchmarks.md  changelog.md  contributing.md  growth-metrics.md  index.md  maintenance-plan.md  plugins.md  post-publish-checklist.md  product-spec.md  research.md
docs/guides/: getting-started.md
docs/how-to/: ci-enforcement.md  generate-examples.md  multi-profile-validation.md
docs/reference/: api.md  cli.md
examples/basic/: .env.dev  .env.prod  README.md  envkeep.toml
examples/socialsense/: README.md  envkeep.toml
examples/socialsense/env/: database.env  integration-tests.env
scripts/: generate_release_notes.py
src/envkeep/: __init__.py  _compat.py  cache.py  cli.py  config.py  display.py  plugins.py  report.py  snapshot.py  spec.py  utils.py
src/envkeep/backends/: aws_sm.py  azure_kv.py  gcp_sm.py  vault.py
tests/: conftest.py
tests/integration/: README.md
tests/plugins/: json_backend.py
tests/unit/: conftest.py  test_cache.py  test_cli.py  test_cli_performance.py  test_config.py  test_discovery.py  test_imports.py  test_plugins.py  test_report.py  test_snapshot.py  test_spec.py  test_utils.py
tests/unit/backends/: test_azure_kv.py
tests/unit/my_package/: my_module.py
