[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "envkeep"
version = "1.0.0"
description = "Typed environment specification, drift detection, and CLI tooling for .env-centric teams."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Andreas Fahl"}
]
keywords = ["devops", "dotenv", "configuration", "validation", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
aws = [
  "boto3>=1.34",
]
vault = [
  "hvac>=2.1",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "mypy>=1.11",
  "ruff>=0.5.5",
  "pre-commit>=3.8",
  "boto3-stubs[secretsmanager]",
  "pytest-mock>=3.14",
  "hvac>=2.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24"
]
release = [
  "build>=1.2",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/afadesigns/envkeep"
Documentation = "https://afadesigns.github.io/envkeep"
Changelog = "https://github.com/afadesigns/envkeep/blob/main/CHANGELOG.md"
Issues = "https://github.com/afadesigns/envkeep/issues"

[project.scripts]
envkeep = "envkeep.cli:app"

[project.entry-points."envkeep.backends"]
json = "tests.plugins.json_backend:JsonBackend"
aws-sm = "envkeep.backends.aws_sm:AwsSecretsManagerBackend"
vault = "envkeep.backends.vault:VaultBackend"



[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/envkeep"]

[tool.ruff]
line-length = 100
exclude = [
  "docs",
  "benchmarks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "COM"]
ignore = ["S603", "S607"]
per-file-ignores = {"tests/**/*" = ["S101"]}

[tool.ruff.lint.isort]
known-first-party = ["envkeep"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
warn_return_any = true
ignore_missing_imports = false
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
  "error"
]

[tool.coverage.run]
source = ["envkeep"]
branch = true
parallel = true

[tool.coverage.report]
omit = ["tests/*", "benchmarks/*"]
show_missing = true

[tool.black]
line-length = 100
skip-string-normalization = false
